--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "start http://localhost:3000 && nodemon --ignore ./OISTATS/ server.js",
-    "stub": "start http://localhost:3000 && nodemon --ignore ./OISTATS/ server.js stub ",
+    "dev": "start http://localhost:3000 && nodemon --ignore ./OISTATS/ --ignore ./DATA/ server.js",
+    "stub": "start http://localhost:3000 && nodemon --ignore ./OISTATS/ --ignore ./DATA/ server.js stub ",
     "start": "start http://localhost:3000 && node server.js"
   },
   "keywords": [],
