--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "compression": "^1.7.4",
     "express": "^4.17.3",
     "mongoose": "^6.4.4"
   },
